AlgoBooster/ab_ui/ab_main/ps2py_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> code
Rule 1     code -> expr
Rule 2     code -> expr code
Rule 3     expr -> calcexpr
Rule 4     expr -> condexpr
Rule 5     expr -> loopexpr
Rule 6     expr -> funcexpr
Rule 7     expr -> returnexpr
Rule 8     calcexpr -> var ASSIGN calc
Rule 9     calc -> LPARENROUND calc RPARENROUND
Rule 10    calc -> calc op calc
Rule 11    calc -> term
Rule 12    op -> PLUS
Rule 13    op -> MINUS
Rule 14    op -> TIMES
Rule 15    op -> DIVIDE
Rule 16    op -> INTDIVIDE
Rule 17    op -> MOD
Rule 18    op -> POWER
Rule 19    var -> NAME
Rule 20    var -> NAME LPARENANG NUMBER RPARENANG
Rule 21    var -> NAME LPARENANG NAME RPARENANG
Rule 22    term -> scalar
Rule 23    term -> set
Rule 24    term -> seq
Rule 25    scalar -> NUMBER
Rule 26    scalar -> funccall
Rule 27    scalar -> var
Rule 28    funccall -> NAME LPARENROUND callparams RPARENROUND
Rule 29    callparams -> calc
Rule 30    callparams -> calc COMMA callparams
Rule 31    set -> LBRACE value RBRACE
Rule 32    seq -> LPARENANG value RPARENANG
Rule 33    value -> scalar COMMA value
Rule 34    value -> scalar
Rule 35    condexpr -> IF cond THEN code ENDIF
Rule 36    condexpr -> IF cond THEN code ELSE code ENDIF
Rule 37    cond -> LPARENROUND cond RPARENROUND
Rule 38    cond -> NOT cond
Rule 39    cond -> term
Rule 40    cond -> cond log cond
Rule 41    cond -> term comp term
Rule 42    log -> AND
Rule 43    log -> OR
Rule 44    comp -> EQ
Rule 45    comp -> NOTEQ
Rule 46    comp -> GT
Rule 47    comp -> GE
Rule 48    comp -> LT
Rule 49    comp -> LE
Rule 50    comp -> IN
Rule 51    comp -> NOT IN
Rule 52    loopexpr -> REPEAT code UNTIL cond
Rule 53    loopexpr -> FOR condfor DO code ENDFOR
Rule 54    condfor -> NAME IN set
Rule 55    condfor -> NAME IN NAME
Rule 56    condfor -> NAME IN scalar TO scalar BY scalar
Rule 57    funcexpr -> PROCEDURE NAME LPARENROUND params RPARENROUND code ENDPROC
Rule 58    returnexpr -> RETURN
Rule 59    returnexpr -> RETURN calc
Rule 60    params -> NAME COMMA params
Rule 61    params -> NAME

Terminals, with rules where they appear

AND                  : 42
ASSIGN               : 8
BY                   : 56
COMMA                : 30 33 60
DIVIDE               : 15
DO                   : 53
ELSE                 : 36
ENDFOR               : 53
ENDIF                : 35 36
ENDPROC              : 57
EQ                   : 44
FOR                  : 53
GE                   : 47
GT                   : 46
IF                   : 35 36
IN                   : 50 51 54 55 56
INTDIVIDE            : 16
LBRACE               : 31
LE                   : 49
LPARENANG            : 20 21 32
LPARENROUND          : 9 28 37 57
LT                   : 48
MINUS                : 13
MOD                  : 17
NAME                 : 19 20 21 21 28 54 55 55 56 57 60 61
NOT                  : 38 51
NOTEQ                : 45
NUMBER               : 20 25
OR                   : 43
PLUS                 : 12
POWER                : 18
PROCEDURE            : 57
RBRACE               : 31
REPEAT               : 52
RETURN               : 58 59
RPARENANG            : 20 21 32
RPARENROUND          : 9 28 37 57
THEN                 : 35 36
TIMES                : 14
TO                   : 56
UNTIL                : 52
error                : 

Nonterminals, with rules where they appear

calc                 : 8 9 10 10 29 30 59
calcexpr             : 3
callparams           : 28 30
code                 : 2 35 36 36 52 53 57 0
comp                 : 41
cond                 : 35 36 37 38 40 40 52
condexpr             : 4
condfor              : 53
expr                 : 1 2
funccall             : 26
funcexpr             : 6
log                  : 40
loopexpr             : 5
op                   : 10
params               : 57 60
returnexpr           : 7
scalar               : 22 33 34 56 56 56
seq                  : 24
set                  : 23 54
term                 : 11 39 41 41
value                : 31 32 33
var                  : 8 27

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . expr
    (2) code -> . expr code
    (3) expr -> . calcexpr
    (4) expr -> . condexpr
    (5) expr -> . loopexpr
    (6) expr -> . funcexpr
    (7) expr -> . returnexpr
    (8) calcexpr -> . var ASSIGN calc
    (35) condexpr -> . IF cond THEN code ENDIF
    (36) condexpr -> . IF cond THEN code ELSE code ENDIF
    (52) loopexpr -> . REPEAT code UNTIL cond
    (53) loopexpr -> . FOR condfor DO code ENDFOR
    (57) funcexpr -> . PROCEDURE NAME LPARENROUND params RPARENROUND code ENDPROC
    (58) returnexpr -> . RETURN
    (59) returnexpr -> . RETURN calc
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

    IF              shift and go to state 9
    REPEAT          shift and go to state 10
    FOR             shift and go to state 11
    PROCEDURE       shift and go to state 12
    RETURN          shift and go to state 14
    NAME            shift and go to state 13

    code                           shift and go to state 1
    expr                           shift and go to state 2
    calcexpr                       shift and go to state 3
    condexpr                       shift and go to state 4
    loopexpr                       shift and go to state 5
    funcexpr                       shift and go to state 6
    returnexpr                     shift and go to state 7
    var                            shift and go to state 8

state 1

    (0) S' -> code .



state 2

    (1) code -> expr .
    (2) code -> expr . code
    (1) code -> . expr
    (2) code -> . expr code
    (3) expr -> . calcexpr
    (4) expr -> . condexpr
    (5) expr -> . loopexpr
    (6) expr -> . funcexpr
    (7) expr -> . returnexpr
    (8) calcexpr -> . var ASSIGN calc
    (35) condexpr -> . IF cond THEN code ENDIF
    (36) condexpr -> . IF cond THEN code ELSE code ENDIF
    (52) loopexpr -> . REPEAT code UNTIL cond
    (53) loopexpr -> . FOR condfor DO code ENDFOR
    (57) funcexpr -> . PROCEDURE NAME LPARENROUND params RPARENROUND code ENDPROC
    (58) returnexpr -> . RETURN
    (59) returnexpr -> . RETURN calc
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

    $end            reduce using rule 1 (code -> expr .)
    UNTIL           reduce using rule 1 (code -> expr .)
    ENDIF           reduce using rule 1 (code -> expr .)
    ELSE            reduce using rule 1 (code -> expr .)
    ENDFOR          reduce using rule 1 (code -> expr .)
    ENDPROC         reduce using rule 1 (code -> expr .)
    IF              shift and go to state 9
    REPEAT          shift and go to state 10
    FOR             shift and go to state 11
    PROCEDURE       shift and go to state 12
    RETURN          shift and go to state 14
    NAME            shift and go to state 13

    expr                           shift and go to state 2
    code                           shift and go to state 15
    calcexpr                       shift and go to state 3
    condexpr                       shift and go to state 4
    loopexpr                       shift and go to state 5
    funcexpr                       shift and go to state 6
    returnexpr                     shift and go to state 7
    var                            shift and go to state 8

state 3

    (3) expr -> calcexpr .

    IF              reduce using rule 3 (expr -> calcexpr .)
    REPEAT          reduce using rule 3 (expr -> calcexpr .)
    FOR             reduce using rule 3 (expr -> calcexpr .)
    PROCEDURE       reduce using rule 3 (expr -> calcexpr .)
    RETURN          reduce using rule 3 (expr -> calcexpr .)
    NAME            reduce using rule 3 (expr -> calcexpr .)
    $end            reduce using rule 3 (expr -> calcexpr .)
    UNTIL           reduce using rule 3 (expr -> calcexpr .)
    ENDIF           reduce using rule 3 (expr -> calcexpr .)
    ELSE            reduce using rule 3 (expr -> calcexpr .)
    ENDFOR          reduce using rule 3 (expr -> calcexpr .)
    ENDPROC         reduce using rule 3 (expr -> calcexpr .)


state 4

    (4) expr -> condexpr .

    IF              reduce using rule 4 (expr -> condexpr .)
    REPEAT          reduce using rule 4 (expr -> condexpr .)
    FOR             reduce using rule 4 (expr -> condexpr .)
    PROCEDURE       reduce using rule 4 (expr -> condexpr .)
    RETURN          reduce using rule 4 (expr -> condexpr .)
    NAME            reduce using rule 4 (expr -> condexpr .)
    $end            reduce using rule 4 (expr -> condexpr .)
    UNTIL           reduce using rule 4 (expr -> condexpr .)
    ENDIF           reduce using rule 4 (expr -> condexpr .)
    ELSE            reduce using rule 4 (expr -> condexpr .)
    ENDFOR          reduce using rule 4 (expr -> condexpr .)
    ENDPROC         reduce using rule 4 (expr -> condexpr .)


state 5

    (5) expr -> loopexpr .

    IF              reduce using rule 5 (expr -> loopexpr .)
    REPEAT          reduce using rule 5 (expr -> loopexpr .)
    FOR             reduce using rule 5 (expr -> loopexpr .)
    PROCEDURE       reduce using rule 5 (expr -> loopexpr .)
    RETURN          reduce using rule 5 (expr -> loopexpr .)
    NAME            reduce using rule 5 (expr -> loopexpr .)
    $end            reduce using rule 5 (expr -> loopexpr .)
    UNTIL           reduce using rule 5 (expr -> loopexpr .)
    ENDIF           reduce using rule 5 (expr -> loopexpr .)
    ELSE            reduce using rule 5 (expr -> loopexpr .)
    ENDFOR          reduce using rule 5 (expr -> loopexpr .)
    ENDPROC         reduce using rule 5 (expr -> loopexpr .)


state 6

    (6) expr -> funcexpr .

    IF              reduce using rule 6 (expr -> funcexpr .)
    REPEAT          reduce using rule 6 (expr -> funcexpr .)
    FOR             reduce using rule 6 (expr -> funcexpr .)
    PROCEDURE       reduce using rule 6 (expr -> funcexpr .)
    RETURN          reduce using rule 6 (expr -> funcexpr .)
    NAME            reduce using rule 6 (expr -> funcexpr .)
    $end            reduce using rule 6 (expr -> funcexpr .)
    UNTIL           reduce using rule 6 (expr -> funcexpr .)
    ENDIF           reduce using rule 6 (expr -> funcexpr .)
    ELSE            reduce using rule 6 (expr -> funcexpr .)
    ENDFOR          reduce using rule 6 (expr -> funcexpr .)
    ENDPROC         reduce using rule 6 (expr -> funcexpr .)


state 7

    (7) expr -> returnexpr .

    IF              reduce using rule 7 (expr -> returnexpr .)
    REPEAT          reduce using rule 7 (expr -> returnexpr .)
    FOR             reduce using rule 7 (expr -> returnexpr .)
    PROCEDURE       reduce using rule 7 (expr -> returnexpr .)
    RETURN          reduce using rule 7 (expr -> returnexpr .)
    NAME            reduce using rule 7 (expr -> returnexpr .)
    $end            reduce using rule 7 (expr -> returnexpr .)
    UNTIL           reduce using rule 7 (expr -> returnexpr .)
    ENDIF           reduce using rule 7 (expr -> returnexpr .)
    ELSE            reduce using rule 7 (expr -> returnexpr .)
    ENDFOR          reduce using rule 7 (expr -> returnexpr .)
    ENDPROC         reduce using rule 7 (expr -> returnexpr .)


state 8

    (8) calcexpr -> var . ASSIGN calc

    ASSIGN          shift and go to state 16


state 9

    (35) condexpr -> IF . cond THEN code ENDIF
    (36) condexpr -> IF . cond THEN code ELSE code ENDIF
    (37) cond -> . LPARENROUND cond RPARENROUND
    (38) cond -> . NOT cond
    (39) cond -> . term
    (40) cond -> . cond log cond
    (41) cond -> . term comp term
    (22) term -> . scalar
    (23) term -> . set
    (24) term -> . seq
    (25) scalar -> . NUMBER
    (26) scalar -> . funccall
    (27) scalar -> . var
    (31) set -> . LBRACE value RBRACE
    (32) seq -> . LPARENANG value RPARENANG
    (28) funccall -> . NAME LPARENROUND callparams RPARENROUND
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

    LPARENROUND     shift and go to state 18
    NOT             shift and go to state 19
    NUMBER          shift and go to state 24
    LBRACE          shift and go to state 27
    LPARENANG       shift and go to state 28
    NAME            shift and go to state 29

    cond                           shift and go to state 17
    term                           shift and go to state 20
    scalar                         shift and go to state 21
    set                            shift and go to state 22
    seq                            shift and go to state 23
    funccall                       shift and go to state 25
    var                            shift and go to state 26

state 10

    (52) loopexpr -> REPEAT . code UNTIL cond
    (1) code -> . expr
    (2) code -> . expr code
    (3) expr -> . calcexpr
    (4) expr -> . condexpr
    (5) expr -> . loopexpr
    (6) expr -> . funcexpr
    (7) expr -> . returnexpr
    (8) calcexpr -> . var ASSIGN calc
    (35) condexpr -> . IF cond THEN code ENDIF
    (36) condexpr -> . IF cond THEN code ELSE code ENDIF
    (52) loopexpr -> . REPEAT code UNTIL cond
    (53) loopexpr -> . FOR condfor DO code ENDFOR
    (57) funcexpr -> . PROCEDURE NAME LPARENROUND params RPARENROUND code ENDPROC
    (58) returnexpr -> . RETURN
    (59) returnexpr -> . RETURN calc
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

    IF              shift and go to state 9
    REPEAT          shift and go to state 10
    FOR             shift and go to state 11
    PROCEDURE       shift and go to state 12
    RETURN          shift and go to state 14
    NAME            shift and go to state 13

    code                           shift and go to state 30
    expr                           shift and go to state 2
    calcexpr                       shift and go to state 3
    condexpr                       shift and go to state 4
    loopexpr                       shift and go to state 5
    funcexpr                       shift and go to state 6
    returnexpr                     shift and go to state 7
    var                            shift and go to state 8

state 11

    (53) loopexpr -> FOR . condfor DO code ENDFOR
    (54) condfor -> . NAME IN set
    (55) condfor -> . NAME IN NAME
    (56) condfor -> . NAME IN scalar TO scalar BY scalar

    NAME            shift and go to state 32

    condfor                        shift and go to state 31

state 12

    (57) funcexpr -> PROCEDURE . NAME LPARENROUND params RPARENROUND code ENDPROC

    NAME            shift and go to state 33


state 13

    (19) var -> NAME .
    (20) var -> NAME . LPARENANG NUMBER RPARENANG
    (21) var -> NAME . LPARENANG NAME RPARENANG

    ASSIGN          reduce using rule 19 (var -> NAME .)
    LPARENANG       shift and go to state 34


state 14

    (58) returnexpr -> RETURN .
    (59) returnexpr -> RETURN . calc
    (9) calc -> . LPARENROUND calc RPARENROUND
    (10) calc -> . calc op calc
    (11) calc -> . term
    (22) term -> . scalar
    (23) term -> . set
    (24) term -> . seq
    (25) scalar -> . NUMBER
    (26) scalar -> . funccall
    (27) scalar -> . var
    (31) set -> . LBRACE value RBRACE
    (32) seq -> . LPARENANG value RPARENANG
    (28) funccall -> . NAME LPARENROUND callparams RPARENROUND
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

  ! shift/reduce conflict for NAME resolved as shift
    IF              reduce using rule 58 (returnexpr -> RETURN .)
    REPEAT          reduce using rule 58 (returnexpr -> RETURN .)
    FOR             reduce using rule 58 (returnexpr -> RETURN .)
    PROCEDURE       reduce using rule 58 (returnexpr -> RETURN .)
    RETURN          reduce using rule 58 (returnexpr -> RETURN .)
    $end            reduce using rule 58 (returnexpr -> RETURN .)
    UNTIL           reduce using rule 58 (returnexpr -> RETURN .)
    ENDIF           reduce using rule 58 (returnexpr -> RETURN .)
    ELSE            reduce using rule 58 (returnexpr -> RETURN .)
    ENDFOR          reduce using rule 58 (returnexpr -> RETURN .)
    ENDPROC         reduce using rule 58 (returnexpr -> RETURN .)
    LPARENROUND     shift and go to state 36
    NUMBER          shift and go to state 24
    LBRACE          shift and go to state 27
    LPARENANG       shift and go to state 28
    NAME            shift and go to state 29

  ! NAME            [ reduce using rule 58 (returnexpr -> RETURN .) ]

    calc                           shift and go to state 35
    term                           shift and go to state 37
    scalar                         shift and go to state 21
    set                            shift and go to state 22
    seq                            shift and go to state 23
    funccall                       shift and go to state 25
    var                            shift and go to state 26

state 15

    (2) code -> expr code .

    $end            reduce using rule 2 (code -> expr code .)
    UNTIL           reduce using rule 2 (code -> expr code .)
    ENDIF           reduce using rule 2 (code -> expr code .)
    ELSE            reduce using rule 2 (code -> expr code .)
    ENDFOR          reduce using rule 2 (code -> expr code .)
    ENDPROC         reduce using rule 2 (code -> expr code .)


state 16

    (8) calcexpr -> var ASSIGN . calc
    (9) calc -> . LPARENROUND calc RPARENROUND
    (10) calc -> . calc op calc
    (11) calc -> . term
    (22) term -> . scalar
    (23) term -> . set
    (24) term -> . seq
    (25) scalar -> . NUMBER
    (26) scalar -> . funccall
    (27) scalar -> . var
    (31) set -> . LBRACE value RBRACE
    (32) seq -> . LPARENANG value RPARENANG
    (28) funccall -> . NAME LPARENROUND callparams RPARENROUND
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

    LPARENROUND     shift and go to state 36
    NUMBER          shift and go to state 24
    LBRACE          shift and go to state 27
    LPARENANG       shift and go to state 28
    NAME            shift and go to state 29

    var                            shift and go to state 26
    calc                           shift and go to state 38
    term                           shift and go to state 37
    scalar                         shift and go to state 21
    set                            shift and go to state 22
    seq                            shift and go to state 23
    funccall                       shift and go to state 25

state 17

    (35) condexpr -> IF cond . THEN code ENDIF
    (36) condexpr -> IF cond . THEN code ELSE code ENDIF
    (40) cond -> cond . log cond
    (42) log -> . AND
    (43) log -> . OR

    THEN            shift and go to state 39
    AND             shift and go to state 41
    OR              shift and go to state 42

    log                            shift and go to state 40

state 18

    (37) cond -> LPARENROUND . cond RPARENROUND
    (37) cond -> . LPARENROUND cond RPARENROUND
    (38) cond -> . NOT cond
    (39) cond -> . term
    (40) cond -> . cond log cond
    (41) cond -> . term comp term
    (22) term -> . scalar
    (23) term -> . set
    (24) term -> . seq
    (25) scalar -> . NUMBER
    (26) scalar -> . funccall
    (27) scalar -> . var
    (31) set -> . LBRACE value RBRACE
    (32) seq -> . LPARENANG value RPARENANG
    (28) funccall -> . NAME LPARENROUND callparams RPARENROUND
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

    LPARENROUND     shift and go to state 18
    NOT             shift and go to state 19
    NUMBER          shift and go to state 24
    LBRACE          shift and go to state 27
    LPARENANG       shift and go to state 28
    NAME            shift and go to state 29

    cond                           shift and go to state 43
    term                           shift and go to state 20
    scalar                         shift and go to state 21
    set                            shift and go to state 22
    seq                            shift and go to state 23
    funccall                       shift and go to state 25
    var                            shift and go to state 26

state 19

    (38) cond -> NOT . cond
    (37) cond -> . LPARENROUND cond RPARENROUND
    (38) cond -> . NOT cond
    (39) cond -> . term
    (40) cond -> . cond log cond
    (41) cond -> . term comp term
    (22) term -> . scalar
    (23) term -> . set
    (24) term -> . seq
    (25) scalar -> . NUMBER
    (26) scalar -> . funccall
    (27) scalar -> . var
    (31) set -> . LBRACE value RBRACE
    (32) seq -> . LPARENANG value RPARENANG
    (28) funccall -> . NAME LPARENROUND callparams RPARENROUND
    (19) var -> . NAME
    (20) var -> . NAME LPARENANG NUMBER RPARENANG
    (21) var -> . NAME LPARENANG NAME RPARENANG

    LPARENROUND     shift and go to state 18
    NOT             shift and go to state 19
    NUMBER          shift and go to state 24
    LBRACE          shift and go to state 27
    LPARENANG       shift and go to state 28
    NAME            shift and go to state 29

    cond                           shift and go to state 44
    term                           shift and go to state 20
    scalar                         shift and go to state 21
    set                            shift and go to state 22
    seq                            shift and go to state 23
    funccall                       shift and go to state 25
    var                            shift and go to state 26

state 20

    (39) cond -> term .
    (41) cond -> term . comp term
    (44) comp -> . EQ
    (45) comp -> . NOTEQ
    (46) comp -> . GT
    (47) comp -> . GE
    (48) comp -> . LT
    (49) comp -> . LE
    (50) comp -> . IN
    (51) comp -> . NOT IN

    THEN            reduce using rule 39 (cond -> term .)
    AND             reduce using rule 39 (cond -> term .)
    OR              reduce using rule 39 (cond -> term .)
    RPARENROUND     reduce using rule 39 (cond -> term .)
    IF              reduce using rule 39 (cond -> term .)
    REPEAT          reduce using rule 39 (cond -> term .)
    FOR             reduce using rule 39 (cond -> term .)
    PROCEDURE       reduce using rule 39 (cond -> term .)
    RETURN          reduce using rule 39 (cond -> term .)
    NAME            reduce using rule 39 (cond -> term .)
    $end            reduce using rule 39 (cond -> term .)
    UNTIL           reduce using rule 39 (cond -> term .)
    ENDIF           reduce using rule 39 (cond -> term .)
    ELSE            reduce using rule 39 (cond -> term .)
    ENDFOR          reduce using rule 39 (cond -> term .)
    ENDPROC         reduce using rule 39 (cond -> term .)
    EQ              shift and go to state 46
    NOTEQ           shift and go to state 47
    GT              shift and go to state 48
    GE              shift and go to state 49
    LT              shift and go to state 50
    LE              shift and go to state 51
    IN              shift and go to state 52
    NOT             shift and go to state 53

    comp                           shift and go to state 45

state 21

    (22) term -> scalar .

    EQ              reduce using rule 22 (term -> scalar .)
    NOTEQ           reduce using rule 22 (term -> scalar .)
    GT              reduce using rule 22 (term -> scalar .)
    GE              reduce using rule 22 (term -> scalar .)
    LT              reduce using rule 22 (term -> scalar .)
    LE              reduce using rule 22 (term -> scalar .)
    IN              reduce using rule 22 (term -> scalar .)
    NOT             reduce using rule 22 (term -> scalar .)
    THEN            reduce using rule 22 (term -> scalar .)
    AND             reduce using rule 22 (term -> scalar .)
    OR              reduce using rule 22 (term -> scalar .)
    PLUS            reduce using rule 22 (term -> scalar .)
    MINUS           reduce using rule 22 (term -> scalar .)
    TIMES           reduce using rule 22 (term -> scalar .)
    DIVIDE          reduce using rule 22 (term -> scalar .)
    INTDIVIDE       reduce using rule 22 (term -> scalar .)
    MOD             reduce using rule 22 (term -> scalar .)
    POWER           reduce using rule 22 (term -> scalar .)
    IF              reduce using rule 22 (term -> scalar .)
    REPEAT          reduce using rule 22 (term -> scalar .)
    FOR             reduce using rule 22 (term -> scalar .)
    PROCEDURE       reduce using rule 22 (term -> scalar .)
    RETURN          reduce using rule 22 (term -> scalar .)
    NAME            reduce using rule 22 (term -> scalar .)
    $end            reduce using rule 22 (term -> scalar .)
    UNTIL           reduce using rule 22 (term -> scalar .)
    ENDIF           reduce using rule 22 (term -> scalar .)
    ELSE            reduce using rule 22 (term -> scalar .)
    ENDFOR          reduce using rule 22 (term -> scalar .)
    ENDPROC         reduce using rule 22 (term -> scalar .)
    RPARENROUND     reduce using rule 22 (term -> scalar .)
    COMMA           reduce using rule 22 (term -> scalar .)


state 22

    (23) term -> set .

    EQ              reduce using rule 23 (term -> set .)
    NOTEQ           reduce using rule 23 (term -> set .)
    GT              reduce using rule 23 (term -> set .)
    GE              reduce using rule 23 (term -> set .)
    LT              reduce using rule 23 (term -> set .)
    LE              reduce using rule 23 (term -> set .)
    IN              reduce using rule 23 (term -> set .)
    NOT             reduce using rule 23 (term -> set .)
    THEN            reduce using rule 23 (term -> set .)
    AND             reduce using rule 23 (term -> set .)
    OR              reduce using rule 23 (term -> set .)
    PLUS            reduce using rule 23 (term -> set .)
    MINUS           reduce using rule 23 (term -> set .)
    TIMES           reduce using rule 23 (term -> set .)
    DIVIDE          reduce using rule 23 (term -> set .)
    INTDIVIDE       reduce using rule 23 (term -> set .)
    MOD             reduce using rule 23 (term -> set .)
    POWER           reduce using rule 23 (term -> set .)
    IF              reduce using rule 23 (term -> set .)
    REPEAT          reduce using rule 23 (term -> set .)
    FOR             reduce using rule 23 (term -> set .)
    PROCEDURE       reduce using rule 23 (term -> set .)
    RETURN          reduce using rule 23 (term -> set .)
    NAME            reduce using rule 23 (term -> set .)
    $end            reduce using rule 23 (term -> set .)
    UNTIL           reduce using rule 23 (term -> set .)
    ENDIF           reduce using rule 23 (term -> set .)
    ELSE            reduce using rule 23 (term -> set .)
    ENDFOR          reduce using rule 23 (term -> set .)
    ENDPROC         reduce using rule 23 (term -> set .)
    RPARENROUND     reduce using rule 23 (term -> set .)
    COMMA           reduce using rule 23 (term -> set .)


state 23

    (24) term -> seq .
